# dose

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
app/: cli.py  main.py  user_manager.py
app/admin/: __init__.py  views.py
app/api/: __init__.py
app/api/v1/: __init__.py  auth.py  test.py  user.py
app/core/: admin_auth.py  config.py  db.py  events.py  logging_config.py  middleware.py
app/core/auth/: admin_backend.py  backend.py  hashing.py  refresh.py
app/models/: __init__.py  base.py  test.py  user.py
app/schemas/: __base__.py  user.py
app/schemas/req/: auth.py  test.py
app/schemas/res/: auth.py  test.py
app/services/: test.py
app/services/auth/: __init__.py  admin_service.py  backend.py  dependencies.py  manager.py  token_service.py
migrations/: env.py
migrations/versions/: 1d1830d86af1_first_init.py  dfd717f65e86_first_init.py
